--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/styles/styles.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Landing page</title>
 </head>
+
 <body>
     <header>
         <nav id="navbar">
@@ -53,8 +59,19 @@
                 </button>
 
                 <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur 
-                    adipiscing elit ut aliquam, purus sit amet
+
+                    "Sabor em Gotas Brasileiras: Explore os Sabores Autênticos do Brasil em Cada Gota!
+
+                    Bem-vindo ao Sabor em Gotas Brasileiras, sua porta de entrada para uma jornada gastronômica única
+                    pelo Brasil. Aqui, mergulhe em um mundo de aromas e sabores que refletem a rica diversidade
+                    culinária de cada região do país.
+
+
+
+''
+
+
+
                 </p>
 
                 <div id="cta_buttons">
@@ -100,14 +117,17 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish.png" class="dish-image" alt="">
+                    <img src="src/images/dish.png" height="150px" class="dish-image" alt="">
+
 
                     <h3 class="dish-title">
-                        Lorem Ipsum
+                        Tapioca de Carne Seca
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Comece sua jornada culinária com nossa tapioca de carne, uma combinação de suculenta carne
+                        desfiada temperada com especiarias brasileiras tradicionais, envolta em uma fina camada de
+                        tapioca dourada e crocante.
                     </span>
 
                     <div class="dish-rate">
@@ -132,14 +152,15 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish2.png" class="dish-image" alt="">
+                    <img src="src/images/dish2.png" height="150px" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem Ipsum
+                        Tapioca de Frango
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nossa tapioca de frango apresenta uma combinação perfeita de frango suculento e macio, marinado
+                        em temperos tradicionais brasileiros e envolto em uma fina e crocante camada de tapioca.
                     </span>
 
                     <div class="dish-rate">
@@ -164,14 +185,16 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish3.png" class="dish-image" alt="">
+                    <img src="src/images/dish3.png" height="150px" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem Ipsum
+                        Tapioca de Morango com Nutella
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Renda-se ao doce encanto da nossa tapioca de morango com Nutella, uma tentação indulgente que
+                        combina a doçura fresca dos morangos com a cremosidade irresistível da Nutella, tudo envolto na
+                        maciez perfeita da tapioca recém-preparada.
                     </span>
 
                     <div class="dish-rate">
@@ -196,14 +219,16 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish4.png" class="dish-image" alt="">
+                    <img src="src/images/dish4.png" height="150px" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem Ipsum
+                        Tapioca de Queijo Coalho com Tucumã
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Para uma experiência verdadeiramente amazônica, experimente nossa tapioca de tucumã e queijo
+                        coalho. O tucumã, uma fruta exótica da Amazônia, oferece um sabor único e vibrante,
+                        complementado pela riqueza e textura do queijo coalho grelhado.
                     </span>
 
                     <div class="dish-rate">
@@ -312,4 +337,5 @@
     </footer>
     <script src="src/javascript/script.js"></script>
 </body>
+
 </html>
