--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
 
             <div id="banner">
-                <img src="src/images/hero.png" alt="">
+                <img src="src/images/Untitled-6.png" alt="">
             </div>
         </section>
 
